1.6.0
* remove zucker dependency, but add debugging, ruby_version, ruby_engine, ruby_info and os gem
* bump binding.repl, paint, wirb

1.5.1
* include binding.repl gem
* bump coderay, awesome_print, method_source, wirb

1.5.0
* update debundle hack
* load less zucker libraries
* add alias gem
* finaly load boson correctly (but don't load any boson plugin, yet), also depend on boson-more
* version bumps (zucker, clipboard, paint, hirb, wirb, ap, coderay, g)

1.4.0
* every_day_irb is now a module that extends self
* specs for most of every_day_irb's functionality
* add helper method for paging output with hirb: page
* version bumps, including wirb and fancy_irb
* remove sketches dependency, it's a great gem, but very similar to interactive_editor
* Object#mlp alias for method_lookup_path

1.3.0 == 1.2.3
* add modern debundle note
* remove loading of .railsrc
* remove dbg method
* version bumps

1.2.2
* fix errors when inspect returns nil (e.g. CarrierWave uploaders)
* create legacy branch for 1.8.7 support

1.2.1
* fix newboson loader issue
* minor version bumps

1.2.0
* version bumps: hirb, awesome_print, coderay, g, methodfinder, method_source
* remove RVM helpers: Sorry, were too buggy...
* fix/improve 'cd' helper method
* improve readme
* move looksee gem to irbtools-more
* more little tweaks

1.1.1
* fix the Ripl.after_rc bug

1.1.0
* fix hirb loading/unicode issue + colorize tables (thanks to halan)
* colorize paged wirb output
* include method locator gem (improved ancestors)
* include looksee gem (aliased as Object#l/Object#ll and Object#edit)
* include method source gem (Object#src)
* small tweaks...

1.0.6
* add possibility to modify library callbacks without removing the library by using: replace_library_callback or add_library_callback
* fix hirb dependency issue
* readme improvements

1.0.5
* use paint gem for terminal colors

1.0.4
* improve error-handling
* fix broken loading of boson + interactive_editor

1.0.3
* fix post-install banner typo

1.0.2