@@ -1,5 +1,6 @@
 1.6.0
 * remove zucker dependency, but add debugging, ruby_version, ruby_engine, ruby_info and os gem
+* configure binding.repl to load irb, not pry
 * bump binding.repl, paint, wirb
 
 1.5.1
